--- a/public/careers/index.html
+++ b/public/careers/index.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carreras</title>
-    <link rel="stylesheet" href="./assets/css/careers.css">
+    <link rel="stylesheet" href="/assets/css/careers.css">
 </head>
 <body>
     <main class="content">
         <section class="engineer__section">
-            <a href="/projects-electronic-engineering.html">Electronic Engineer</a>
+            <a href="/projects-electronic-engineering">Ingeniería Electrónica</a>
         </section>
         <section class="nurse__section">
-            <a href="/projects-nurse.html">Nurse</a>
+            <a href="/projects-nurse">Salud</a>
         </section>
     </main>
 </body>
