--- a/public/projects-electronic-engineering/index.html
+++ b/public/projects-electronic-engineering/index.html
@@ -5,14 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyectos Ingenería Electrónica</title>
-    <link rel="stylesheet" href="./assets/css/electronicEngineeringProjects.css">
+    <link rel="stylesheet" href="/assets/css/electronicEngineeringProjects.css">
 </head>
 <body>
     <main>
         <h1>PROYECTOS</h1>
         <div class="dropdown__container">
-            <button>Tutoriales</button>
-            <button>Sistemas empotrados</button>
+            <button>Sistemas Embebidos</button>
             <button>Seguridad</button>
             <button>IoT</button>
             <button>Desarrollo</button>
