fixed routes in hrefs

--- a/public/careers/index.html
+++ b/public/careers/index.html
@@ -10,10 +10,10 @@
 <body>
     <main class="content">
         <section class="engineer__section">
-            <a href="/projects-electronic-engineering">Ingeniería Electrónica</a>
+            <a href="/projects-electronic-engineering.html">Ingeniería Electrónica</a>
         </section>
         <section class="nurse__section">
-            <a href="/projects-nurse">Salud</a>
+            <a href="/projects-nurse.html">Salud</a>
         </section>
     </main>
 </body>
