--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-    <a href="/"><img src="./assets/img/logo.png" alt="Logo del blog"></a>
+    <a href="/"><img src="/assets/img/logo.png" alt="Logo del blog"></a>
     <nav>
 
     </nav>
@@ -23,7 +23,7 @@
         </div>
     </main>
     <footer>
-    <img src="../assets/img/logo.png" alt="Logo del blog">
+    <img src="/assets/img/logo.png" alt="Logo del blog">
     @ 2022 Camila Arzuza
 </footer> 
 </body>
