change url index

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
 <main class="home__content">
     <div class="title__container">
         <h1 class="main__title">WELCOME TO MY <a class="blog__link" href="/careers">BLOG</a></h1>
-        <img src="./assets/img/camiloarzuza.png" alt="">
+        <img src="/assets/img/camiloarzuza.png" alt="">
         <p>Hello, I'm <a class="about__link" href="/biography">Camilo Arzuza</a>, Electronic Engineer and Nurse.</p>
     </div>
 </main>
