--- a/public/about/index.html
+++ b/public/about/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My homepage</title>
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/style.css">
   <script defer src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
 <body>
@@ -14,8 +14,8 @@
     <a href="/"><img src="/assets/img/logo.png" alt="Logo del blog"></a>
     <nav>
         <ul>
-            <li><a href="/">Portafolio</a></li>
-            <li><a href="/postHome">Blog</a></li>
+            <li><a href="/postHome">Portafolio</a></li>
+            <li><a href="/blog">Blog</a></li>
         </ul>
     </nav>
 </header>
